<resources>
    <string name="app_name">AplicativoAP1</string>
    <string name="first_fragment_label">Primeiro Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="voltar">Voltar</string>
    <string name="erick">Erick Xavier Ribeiro</string>
    <string name="texto_erick">RA 2403958</string>
    <string name="acessibilidade_github">GitHub</string>
    <string name="acessibilidade_lindekin">Linkedin</string>
    <string name="julia">Julia Lourenço Nogueira</string>
    <string name="title">AP1 de Mobile</string>
    <string name="calculadora_cigarro">Calculadora Cigarro</string>
    <string name="lucas">Lucas Aguiar Nunes</string>
    <string name="murillo">Murillo Luiz Inácio de Souza</string>
    <string name="vinivius">Vinicius Ferreira de Freitas</string>
    <string name="calculadora">Calculadora Cigarros</string>
    <string name="calcular">Calcular</string>
    <string name="anos">Há Quantos Anos Você Fuma?</string>
    <string name="qtd_cigarros">Quantos Cigarros Fuma por Dia?</string>
    <string name="texto_julia">RA 2403808</string>
    <string name="texto_lucas">RA 2403912</string>
    <string name="texto_murillo">RA 2400933</string>
    <string name="texto_vinicius">RA 2403865</string>
    <string name="integrantes">Integrantes</string>
</resources>